mobile issues fix

--- a/src/app/components/atoms/container/container.component.scss
+++ b/src/app/components/atoms/container/container.component.scss
@@ -13,3 +13,11 @@
         box-sizing: border-box;
     }
 }
+
+@media screen and (max-width: 600px) {
+    .collide {
+        &__container {
+            min-height: 75vh;
+        }
+    }
+}
