--- a/src/app/components/organisms/panel1/panel1.component.scss
+++ b/src/app/components/organisms/panel1/panel1.component.scss
@@ -84,3 +84,11 @@
         transform: scale(1);
     }
 }
+
+@media screen and (max-width: 600px) {
+    .collide {
+        &__panel1 {
+            height: 70vh;
+        }
+    }
+}
