--- a/src/app/components/organisms/panel2/panel2.component.html
+++ b/src/app/components/organisms/panel2/panel2.component.html
@@ -4,11 +4,8 @@
             <app-badge badgeSlot rotate="-15" top="-3rem" left="-20px">Cus,</app-badge>
             <div titleSlot>Today only happens once</div>
         </app-title>
-        <app-media-window windowWidth="95%" variant="multi" isHidden="true">
-            <video width="100%" controls contentSlot>
-                <source src="../../../../assets/videos/collide_photography.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
+        <app-media-window windowWidth="95%" windowHeight="50rem" variant="multi" isHidden="true">
+            <iframe contentSlot src="https://player.vimeo.com/video/737935447?h=184af6c46b&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="width:100%;height:100%;" title="Collide_Photography"></iframe>
         </app-media-window>
     </div>
 </app-container>
