--- a/src/app/components/organisms/panel4/panel4.component.html
+++ b/src/app/components/organisms/panel4/panel4.component.html
@@ -10,26 +10,17 @@
         </div>
         <div class="collide__panel4__section">
             <app-media-window windowWidth="100%" windowHeight="28rem" label="Nationwide College Fest">
-                <video width="100%" height="100%" controls contentSlot style="object-fit: fill;">
-                    <source src="../../../../assets/videos/dance_hq_final.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
+                <iframe contentSlot src="https://player.vimeo.com/video/736810917?h=32b65976b2&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="width:100%;height:100%;" title="Dance_HQ_FINAL_YT 4k with SUBS.mp4"></iframe>
             </app-media-window>
         </div>
         <div class="collide__panel4__section">
             <app-media-window windowWidth="100%" windowHeight="28rem" label="Compete for glory">
-                <video width="100%" height="100%" controls contentSlot style="object-fit: fill;">
-                    <source src="../../../../assets/videos/Collide_gaming.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
+                <iframe contentSlot src="https://player.vimeo.com/video/737522444?h=3c88f9c6e9&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="width:100%;height:100%;" title="Collide_gaming"></iframe>
             </app-media-window>
         </div>
         <div class="collide__panel4__section">
             <app-media-window windowWidth="100%" windowHeight="28rem" label="More than Just A Concert">
-                <video width="100%" height="100%" controls contentSlot style="object-fit: fill;">
-                    <source src="../../../../assets/videos/collide_photography.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
+                <iframe contentSlot src="https://player.vimeo.com/video/737935447?h=184af6c46b&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="width:100%;height:100%;" title="Collide_Photography"></iframe>
             </app-media-window>
         </div>
     </div>
